[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "graphics_engine",
]

[dependencies]
anyhow = "1.0.69"
color-eyre = "0.6.2"
env_logger = "0.10.0"
graphics_engine = { path = "./graphics_engine" }
log = "0.4.17"
pollster = "0.3.0"
thiserror = "1.0.39"
